added MPQCInit class; add example using MPQCInit class
--HG--
rename : mpqc/doc/devsamp/Makefile => mpqc/doc/devsamp/mp2/Makefile
rename : mpqc/doc/devsamp/mp2.cc => mpqc/doc/devsamp/mp2/mp2.cc
rename : mpqc/doc/devsamp/mp2.in => mpqc/doc/devsamp/mp2/mp2.in
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409034

--- a/mpqc/src/bin/mpqc/Makefile
+++ b/mpqc/src/bin/mpqc/Makefile
@@ -15,7 +15,7 @@ CXXINCLUDE += -I. -I$(SRCDIR)
 
 TARGET_TO_MAKE = mpqc
 
-CXXSRC = mpqc.cc mpqcin.cc
+CXXSRC = mpqc.cc mpqcin.cc mpqcinit.cc
 XGENCXXSRC = parse.cc scan.cc
 CSRC =
 INC =
@@ -24,6 +24,7 @@ XGENINC = parse.h
 DEPENDINCLUDE = $(INC)
 
 BINOBJ = $(CXXSRC:%.cc=%.$(OBJSUF)) $(XGENCXXSRC:%.cc=%.$(OBJSUF)) $(CSRC:%.c=%.$(OBJSUF))
+INITOBJ = mpqcinit.$(OBJSUF)
 
 DISTFILES = $(CXXSRC) $(CSRC) $(INC) Makefile LIBS.h
 
@@ -63,6 +64,11 @@ $(TOPDIR)/lib/libmpqc.a: $(BINOBJ)
 	$(AR) $(ARFLAGS) $@ $^
 	$(RANLIB) $@
 
+$(TOPDIR)/lib/libmpqcinit.a: $(INITOBJ)
+	/bin/rm -f $@
+	$(AR) $(ARFLAGS) $@ $^
+	$(RANLIB) $@
+
 ifeq ($(ENABLE_DEPLIBS),yes)
 MPQCLTDEPLIBS=$(LIBS)
 MPQCLTSYSLIBS=$(SYSLIBS)
@@ -74,9 +80,22 @@ endif
 $(TOPDIR)/lib/libmpqc.la: $(BINOBJ) $(MPQCLTDEPLIBS)
 	$(LTLINK) $(CXX) -o $@ $^ $(LTLINKLIBOPTS) $(MPQCLTSYSLIBS)
 
+$(TOPDIR)/lib/libmpqcinit.la: $(INITOBJ) $(MPQCLTDEPLIBS)
+	$(LTLINK) $(CXX) -o $@ $^ $(LTLINKLIBOPTS) $(MPQCLTSYSLIBS)
+
 install_devel:: $(TOPDIR)/lib/libmpqc.$(LIBSUF)
 	test -d $(installroot)$(libdir) || $(MKINSTALLDIRS) $(installroot)$(libdir)
 	$(LTINST) $(INSTALL) $(INSTALLLIBOPT) $< $(installroot)$(libdir)
+
+install_devel:: $(TOPDIR)/lib/libmpqcinit.$(LIBSUF)
+	test -d $(installroot)$(libdir) || $(MKINSTALLDIRS) $(installroot)$(libdir)
+	$(LTINST) $(INSTALL) $(INSTALLLIBOPT) $< $(installroot)$(libdir)
+
+install_devel:: install_inc
+
+install_inc::
+	$(MKINSTALLDIRS) $(installroot)$(includedir)
+	-$(INSTALL) $(INSTALLLIBOPT) $(SRCDIR)/mpqcinit.h $(installroot)$(includedir)
 
 install:: mpqc
 	test -d $(installroot)$(bindir) || $(MKINSTALLDIRS) $(installroot)$(bindir)
