updated for babel 1.4
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409068

--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -2134,7 +2134,7 @@ if test $components == "yes"; then
   CCA_CHEM_INCLUDE=-I$CCA_CHEM_INCLUDE
   BABEL_INCLUDE="-I$BABEL_INCLUDE/c -I$BABEL_INCLUDE/cxx"
   CCA_SPEC_BABEL_INCLUDE="-I$CCA_SPEC_BABEL_INCLUDE -I$CCA_SPEC_BABEL_INCLUDE/c -I$CCA_SPEC_BABEL_INCLUDE/cxx"
-  CCAFE_INCLUDE="-I$CCAFE_INCLUDE -I$CCAFE_INCLUDE/../cxx -I$CCAFE_INCLUDE/dc/babel.new/babel-cca/server"
+  CCAFE_INCLUDE="-I$CCAFE_INCLUDE -I$CCAFE_INCLUDE/../cxx -I$CCAFE_INCLUDE/dc/babel.12/babel-cca -I$CCAFE_INCLUDE/dc/babel.12/babel-cca/server"
   CPPFLAGS="$CPPFLAGS $BABEL_INCLUDE $CCA_SPEC_BABEL_INCLUDE $CCA_CHEM_INCLUDE $CCAFE_INCLUDE"
 
   AC_CHECK_HEADER(sidl.h,
