DensityFitting works, but produces incorrect output in some parallel runs.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409086

--- a/mpqc/src/lib/chemistry/qc/df/dftest.in
+++ b/mpqc/src/lib/chemistry/qc/df/dftest.in
@@ -182,8 +182,9 @@ stdbasis<GaussianBasisSet>: (
   basisdir = "./"
   basisfiles = [ "tmp" ]
   molecule = $:molecule
-  name = "DZ (Dunning)"
+  %name = "DZ (Dunning)"
   %name = "1s"
+  name = "STO-3G"
   %puream = true
 )
 
@@ -193,6 +194,6 @@ stdfitbasis<UncontractedBasisSet>: (
 
 stdfitmbasis<GaussianBasisSet>: (
   molecule = $:molecule
-  name = "aug-cc-pVQZ"
+  name = "aug-cc-pVDZ"
 )
 
