Include df subdirectory in the default compilation.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409088

--- a/mpqc/src/lib/chemistry/qc/Makefile
+++ b/mpqc/src/lib/chemistry/qc/Makefile
@@ -33,7 +33,7 @@ endif
 include $(SRCDIR)/$(TOPDIR)/lib/GlobalMakefile
 include $(TOPDIR)/lib/Makedirlist
 
-SUBDIRS = basis oint3 intv3 wfn scf dft mbpt
+SUBDIRS = basis oint3 intv3 wfn scf dft mbpt df
 ifeq ($(HAVE_SC_SRC_LIB_CHEMISTRY_QC_CC),yes)
 SUBDIRS := $(SUBDIRS) cc
 endif
