1) Reorganized Integral interface to make it easier to implement and use evaluators for 4-center, 3-center, and 2-center integrals. This required quite a bit of type-based indirection, which hopefully does not break modern compilers. 2) Density fitting-based MO transform works.
--HG--
rename : mpqc/src/lib/chemistry/qc/basis/inttypedescr.cc => mpqc/src/lib/chemistry/qc/basis/operator.cc
rename : mpqc/src/lib/chemistry/qc/basis/inttypedescr.h => mpqc/src/lib/chemistry/qc/basis/operator.h
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409102

--- a/mpqc/src/lib/chemistry/qc/df/dftest.in
+++ b/mpqc/src/lib/chemistry/qc/df/dftest.in
@@ -182,9 +182,9 @@ stdbasis<GaussianBasisSet>: (
   basisdir = "./"
   basisfiles = [ "tmp" ]
   molecule = $:molecule
-  %name = "DZ (Dunning)"
+  name = "DZ (Dunning)"
   %name = "1s"
-  name = "STO-3G"
+  %name = "STO-3G"
   %puream = true
 )
 
