Now kernel computation in DensityFitting uses TwoBodyTwoCenterIntOp-based code.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409106

--- a/mpqc/src/lib/chemistry/qc/df/dftest.in
+++ b/mpqc/src/lib/chemistry/qc/df/dftest.in
@@ -24,6 +24,13 @@ ne<Molecule>: (
    }
 )
 
+h<Molecule>: (
+  symmetry=c1
+   { atoms    geometry } = {
+      H  [ 0.0 0.0 0.0 ]
+   }
+)
+
 h2o<Molecule>: (
   symmetry=c1
   { atoms geometry} = {
@@ -178,9 +185,12 @@ test: (
    wfn = $:wfn
 )   
 
-stdbasis<GaussianBasisSet>: (
-  basisdir = "./"
-  basisfiles = [ "tmp" ]
+stdbasis<SplitBasisSet>: (
+  basis = $:stdmbasis
+)
+stdmbasis<GaussianBasisSet>: (
+  %basisdir = "./"
+  %basisfiles = [ "tmp" ]
   molecule = $:molecule
   name = "DZ (Dunning)"
   %name = "1s"
@@ -196,4 +206,3 @@ stdfitmbasis<GaussianBasisSet>: (
   molecule = $:molecule
   name = "aug-cc-pVDZ"
 )
-
