1) factorized ParamsRegistry out of MOIntsRegistry 2) generalized MOIntsFactory to TwoBodyMOIntsFactory<NumCenters>
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409108

--- a/mpqc/src/lib/chemistry/qc/df/dftest.in
+++ b/mpqc/src/lib/chemistry/qc/df/dftest.in
@@ -1,6 +1,6 @@
 % Test -*- KeyVal -*- input for the DensityFitting class.
 
-molecule = $:ne
+molecule = $:h
 basis = $:stdbasis
 fitbasis = $:stdfitbasis
 
