1) Implemented DensityFittingRuntime that keeps track of DensityFitting objects. 2) 4-center 2-body integrals can now be build by density fitting using TwoBodyMOIntsFactory. 3) R12 code can take advantage of the density fitting by setting keyword df_basis. Simple cases work, but somewhat more complicated cases show that certain contributions to V, X, and B matrices are incorrect. There are still bugs in there, but we are almost there.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409112

--- a/mpqc/src/lib/chemistry/qc/df/Makefile
+++ b/mpqc/src/lib/chemistry/qc/df/Makefile
@@ -37,9 +37,9 @@ DEFINES += -DSRCDIR=\"$(SRCDIR)\"
 TARGET_TO_MAKE = libSCdf
 BIN_OR_LIB = LIB
 
-CXXSRC = df.cc
+CXXSRC = df.cc df_runtime.cc
 
-INC = df.h
+INC = df.h df_runtime.h
 
 TESTSRC = dftest.cc
 TESTOBJ = $(TESTSRC:%.cc=%.$(OBJSUF))
