--- a/mpqc/src/lib/chemistry/qc/mbptr12/Makefile
+++ b/mpqc/src/lib/chemistry/qc/mbptr12/Makefile
@@ -63,7 +63,7 @@ CXXSRCS = mbptr12.cc \
   singles_emp2.cc bc_contrib.cc blas.cc dkh.cc \
   moints_runtime.cc fockbuilder.cc fockbuild_runtime.cc \
   orbitalspace_runtime.cc  transform_ijR.cc \
-  transform_ixjy_df.cc
+  transform_ixjy_df.cc  tbint_runtime.cc
   
 INC = r12ia_memgrp.h \
 ansatz.h                        r12ia_mpiiofile.h \
@@ -85,7 +85,8 @@ print_scmat_norms.h             utils.impl.h \
 r12_amps.h                      vxb_eval_info.h \
 r12ia.h				moints_runtime.h \
 fockbuilder.h                   fockbuild_runtime.h \
-orbitalspace_runtime.h		transform_ijR.h
+orbitalspace_runtime.h		transform_ijR.h \
+tbint_runtime.h
 
 ifeq ($(HAVE_MPIIO),yes)
   CXXSRCS += r12ia_mpiiofile.cc
