--- a/mpqc/src/lib/chemistry/qc/Makefile
+++ b/mpqc/src/lib/chemistry/qc/Makefile
@@ -33,7 +33,7 @@ endif
 include $(SRCDIR)/$(TOPDIR)/lib/GlobalMakefile
 include $(TOPDIR)/lib/Makedirlist
 
-SUBDIRS = basis oint3 intv3 wfn scf dft mbpt df
+SUBDIRS = basis oint3 intv3 wfn scf dft mbpt
 ifeq ($(HAVE_SC_SRC_LIB_CHEMISTRY_QC_CC),yes)
 SUBDIRS := $(SUBDIRS) cc
 endif
@@ -44,7 +44,7 @@ ifeq ($(HAVE_SC_SRC_LIB_CHEMISTRY_QC_LIBINT2),yes)
 SUBDIRS := $(SUBDIRS) libint2
 endif
 ifeq ($(HAVE_SC_SRC_LIB_CHEMISTRY_QC_MBPTR12),yes)
-SUBDIRS := $(SUBDIRS) mbptr12
+SUBDIRS := $(SUBDIRS) mbptr12 df
 endif
 ifeq ($(HAVE_SC_SRC_LIB_CHEMISTRY_QC_PSI),yes)
 SUBDIRS := $(SUBDIRS) psi
