added DSPTRF-based factorization and linear equation solve (basically decomposed DSPSVX into 2 parts). The default in DensityFitting is to factorize kernel once, then use it to solve linear equations for each batch separately.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409173

--- a/mpqc/src/lib/chemistry/qc/mbptr12/f77sym.in
+++ b/mpqc/src/lib/chemistry/qc/mbptr12/f77sym.in
@@ -10,3 +10,7 @@
 #define F77_DSPTRI
 #define F77_DLANSP
 #define F77_DSPCON
+#define F77_DLAMCH
+#define F77_DLACPY
+#define F77_DSPTRS
+#define F77_DSPRFS
