--- a/mpqc/src/lib/chemistry/qc/ccr12/Makefile
+++ b/mpqc/src/lib/chemistry/qc/ccr12/Makefile
@@ -38,7 +38,7 @@ BIN_OR_LIB = LIB
 
 CXXSRC = ccr12.cc ccr12_info.cc ccr12_info_offset.cc \
          ccr12_info_fill_in.cc ccr12_info_fill_in_r12.cc \
-         ccr12_info_routines.cc ccr12_info_drivers.cc tensor.cc \
+         ccr12_info_routines.cc ccr12_info_drivers.cc tensor.cc mtensor.cc \
          ccsd.cc ccsd_t1.cc ccsd_t2.cc ccsd_e.cc tensorextrap.cc \
          ccsdt.cc ccsdt_t1.cc ccsdt_t2.cc ccsdt_t3.cc \
          ccsd_pt_right.cc ccsd_pt_left.cc ccsd_pt.cc \
@@ -47,7 +47,7 @@ CXXSRC = ccr12.cc ccr12_info.cc ccr12_info_offset.cc \
          ccsdtq.cc ccsdtq_t2.cc ccsdtq_t3.cc ccsdtq_t4.cc \
          ccr12_info_drivers_r12.cc ccr12_info_intermediates.cc \
          ccsd_r12.cc ccsd_r12_e.cc ccsd_r12_t1.cc ccsd_r12_t2.cc \
-         ccsdpr12.cc ccsdpr12_t1.cc ccsdpr12_t2.cc lambda_energy.cc lambdapenergy.cc mtensor.cc \
+         ccsdpr12.cc ccsdpr12_t1.cc ccsdpr12_t2.cc ccsdpr12_c.cc \
          ccsd_sub_r12_right.cc ccsd_sub_r12_left.cc ccsd_sub_r12_energy.cc ccsd_r12_pt_right.cc \
          lambda_ccsd_t1.cc lambda_ccsd_t2.cc lambda_ccsdpr12_t1.cc lambda_ccsdpr12_t2.cc \
          ccsd_2t_pr12_right.cc ccsd_2t_r12_left.cc
