--- a/mpqc/src/lib/chemistry/qc/ccr12/Makefile
+++ b/mpqc/src/lib/chemistry/qc/ccr12/Makefile
@@ -42,7 +42,7 @@ CXXSRC = ccr12.cc ccr12_info.cc ccr12_info_offset.cc \
          ccsd.cc ccsd_t1.cc ccsd_t2.cc ccsd_e.cc tensorextrap.cc \
          ccsdt.cc ccsdt_t1.cc ccsdt_t2.cc ccsdt_t3.cc \
          ccsd_pt_right.cc ccsd_pt_left.cc ccsd_pt.cc \
-         parenthesis2t.cc parenthesis2q.cc parenthesis2tnum.cc \
+         parenthesis2t.cc parenthesis2q.cc \
          ccsd_2t_left.cc ccsd_2t_right.cc ccsd_2q_left.cc ccsd_2q_right.cc \
          ccsdtq.cc ccsdtq_t2.cc ccsdtq_t3.cc ccsdtq_t4.cc \
          ccr12_info_drivers_r12.cc ccr12_info_intermediates.cc \
