Updated F12 inputs to reflect the redefined ratio of precisions of HF reference to that the correlated method.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409280

--- a/mpqc/src/bin/mpqc/validate/ref/mp2f12_mp2f12slashc00ccpvdzaugccpvdzc2v.in
+++ b/mpqc/src/bin/mpqc/validate/ref/mp2f12_mp2f12slashc00ccpvdzaugccpvdzc2v.in
@@ -32,6 +32,7 @@ mpqc: (
   do_gradient = no
   % method for computing the molecule's energy
   mole<MBPT2_R12>: (
+    value_accuracy = 1e-9
     molecule = $:molecule
     basis = $:basis
     coor = $..:coor
