i) Offset functions for V^dagger and X (or B) intermediates of ip ansatz added. ii) V^dagger(ip) * T2 contraction added. iii) Related investment for triples corrections -- IF you turned off the macro in ccr12_triples.h, it will come back to iip/iii ansatz. They return 0.0 as expected at this moment (go through all the lines).
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409291

--- a/mpqc/src/lib/chemistry/qc/ccr12/Makefile
+++ b/mpqc/src/lib/chemistry/qc/ccr12/Makefile
@@ -50,8 +50,8 @@ CXXSRC = ccr12.cc ccr12_info.cc ccr12_info_offset.cc \
          ccsdpr12.cc ccsdpr12_t1.cc ccsdpr12_t2.cc ccsdpr12_c.cc \
          ccsd_sub_r12.cc ccsd_sub_bar_r12.cc ccsd_sub_r12_right.cc ccsd_sub_r12_left.cc ccsd_r12_pt_right.cc \
          lambda_ccsd_t1.cc lambda_ccsd_t2.cc lambda_ccsdpr12_t1.cc lambda_ccsdpr12_t2.cc \
-         ccsd_2t_pr12_right.cc ccsd_2t_r12_left.cc \
-         triples_utils.cc triples_doubles.cc triples_singles.cc triples_energy.cc \
+         ccsd_2t_pr12_right.cc ccsd_2t_r12_left.cc ccr12_triples.cc \
+         triples_utils.cc triples_doubles.cc triples_singles.cc triples_energy.cc triples_denom_contraction.cc \
          prediagon.cc
 
 INC = 
