Added obintfactory.h to the list of installed header files.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409316

--- a/mpqc/src/lib/chemistry/qc/basis/Makefile
+++ b/mpqc/src/lib/chemistry/qc/basis/Makefile
@@ -52,7 +52,8 @@ INC = basis.h gaussbas.h guassshell.h files.h \
       sobasis.h sointegral.h \
       orthog.h gpetite.h distshpair.h intparams.h intdescr.h \
       uncontract.h split.h lselect.h operator.h fjt.h \
-      distsh.h inttraits.h operator.h union.h
+      distsh.h inttraits.h operator.h union.h \
+      obintfactory.h
 
 TESTSRC = btest.cc
 TESTOBJ = $(TESTSRC:%.cc=%.$(OBJSUF))
