1) refactored the R12 code to allow more general specification of references and geminal spaces. 2) refactored PsiCI[2]_R12 code into a stand-alone PT2R12 class that currently works with PsiSCF references.
--HG--
rename : mpqc/src/lib/chemistry/qc/mbptr12/vxb_eval_info.cc => mpqc/src/lib/chemistry/qc/mbptr12/r12wfnworld.cc
rename : mpqc/src/lib/chemistry/qc/mbptr12/vxb_eval_info.h => mpqc/src/lib/chemistry/qc/mbptr12/r12wfnworld.h
rename : mpqc/src/lib/chemistry/qc/mbptr12/refinfo.cc => mpqc/src/lib/chemistry/qc/mbptr12/ref.cc
rename : mpqc/src/lib/chemistry/qc/mbptr12/refinfo.h => mpqc/src/lib/chemistry/qc/mbptr12/ref.h
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409318

--- a/mpqc/src/lib/chemistry/qc/mbptr12/Makefile
+++ b/mpqc/src/lib/chemistry/qc/mbptr12/Makefile
@@ -39,55 +39,57 @@ BIN_OR_LIB = LIB
 CXXSRCS = mbptr12.cc \
   distarray4.cc \
   distarray4_node0file.cc distarray4_memgrp.cc \
-  vxb_eval_info.cc \
-  compute_energy_a.cc mp2r12_energy.cc \
-  multipole_ints.cc ri_basis.cc \
-  orbitalspace.cc pairiter.cc \
+  orbitalspace.cc orbitalspace_utils.cc \
+  pairiter.cc ri_basis.cc \
   transform_factory.cc transform_tbint.cc \
   transform_ijxy.cc transform_ixjy.cc transform_ikjy.cc \
   transform_iRjS.cc \
   transform_123inds.cc transform_13inds.cc transform_12inds.cc \
   compute_ixjy.cc compute_ikjy.cc compute_ijxy.cc \
   compute_iRjS.cc \
-  r12int_eval.cc \
-  coulomb.cc exchange.cc fock.cc \
-  r12_amps.cc compute_amps.cc \
+  ref.cc utils.cc \
+  r12wfnworld.cc \
   twobodygrid.cc svd.cc linearr12.cc intermeds_g12.cc \
-  refinfo.cc singlerefinfo.cc utils.cc \
   twoparticlecontraction.cc spin.cc \
-  mp2r12_energy_compute.cc mp2_pair_energies.cc \
   ebc_contribs.cc gbc_contribs.cc approxB.cc Xgen.cc FxFgen.cc \
   creator.cc approxC.cc approxCp.cc approxApp.cc ansatz.cc \
   mp2r12_energy_util.cc compute_VXB_a.cc \
   compute_VXB_a_vbsneqobs.cc \
   gaussianfit.cc r12technology.cc twobody_intermeds.cc \
-  singles_emp2.cc bc_contrib.cc blas.cc dkh.cc fixedcoefficient.cc \
+  singles_emp2.cc blas.cc fixedcoefficient.cc \
   compute_VXB_c_ansatz1.cc approxC_ansatz1.cc \
   compute_VX_GenRefansatz2.cc approxC_GenRefansatz2.cc \
   moints_runtime.cc fockbuilder.cc fockbuild_runtime.cc \
-  orbitalspace_runtime.cc  transform_ijR.cc \
-  transform_ixjy_df.cc  tbint_runtime.cc
+  orbitalspace_runtime.cc wfnworld.cc transform_ijR.cc \
+  transform_ixjy_df.cc  tbint_runtime.cc \
+  r12int_eval.cc \
+  coulomb.cc exchange.cc fock.cc \
+  r12_amps.cc compute_amps.cc \
+  mp2r12_energy_compute.cc mp2_pair_energies.cc \
+  compute_energy_a.cc mp2r12_energy.cc bc_contrib.cc dkh.cc \
+  pt2r12.cc
   
 INC = distarray4_memgrp.h \
 ansatz.h                        distarray4_mpiiofile.h \
 distarray4_node0file.h compute_tbint_tensor.h r12int_eval.h \
 container.h                     r12technology.h \
 contract_tbint_tensor.h  contract_tbint_tensors_to_obtensor.h \
-singlerefinfo.h \
+ref.h \
 creator.h                       spin.h \
 gaussianfit.h gaussianfit.timpl.h transform_123inds.h \
 transform_12inds.h linearr12.h transform_13inds.h \
 linearr12.timpl.h               transform_factory.h \
 linkage.h                       transform_ijxy.h \
 mbptr12.h                       transform_ikjy.h \
-orbitalspace.h                  transform_ixjy.h \
+orbitalspace.h                  orbitalspace_utils.h \
+transform_ixjy.h \
 mp2r12_energy.h                 transform_tbint.h \
 mp2r12_energy_util.h            twobodygrid.h \
 twobodytensorinfo.h \
 pairiter.h                      twoparticlecontraction.h \
 print.h                         utils.h \
 print_scmat_norms.h             utils.impl.h \
-r12_amps.h                      vxb_eval_info.h \
+r12_amps.h                      r12wfnworld.h \
 distarray4.h				moints_runtime.h \
 fockbuilder.h                   fockbuild_runtime.h \
 orbitalspace_runtime.h		transform_ijR.h \
@@ -108,7 +110,7 @@ DEPENDINCLUDE = $(INC) $(GENINC) $(SGENINC)
 
 LIBS := $(shell $(LISTLIBS) $(INCLUDE) $(DEFINES) $(SRCDIR)/LIBS.h)
 
-default:: $(DEPENDINCLUDE)
+default::
 
 include $(SRCDIR)/$(TOPDIR)/lib/GlobalRules
 
@@ -127,7 +129,7 @@ f77sym.h: f77sym.in
 distclean::
 	/bin/rm -f f77sym.h
 
-mbptr12test.d $(LIBOBJ:.$(OBJSUF)=.d): $(DEPENDINCLUDE)
+#mbptr12test.d $(LIBOBJ:.$(OBJSUF)=.d): $(DEPENDINCLUDE)
 ifneq ($(DODEPEND),no)
 include $(LIBOBJ:.$(OBJSUF)=.d) mbptr12test.d
 endif
