--- a/mpqc/src/lib/chemistry/qc/psi/Makefile
+++ b/mpqc/src/lib/chemistry/qc/psi/Makefile
@@ -9,18 +9,14 @@ include $(TOPDIR)/lib/Makedirlist
 TARGET_TO_MAKE = libSCpsi
 BIN_OR_LIB = LIB
 
-CXXSRC = psiwfn.cc psiexenv.cc psiinput.cc psifile11.cc psicc.cc psici.cc psiqtorder.cc \
-r12ref.cc
+CXXSRC = psiwfn.cc psiexenv.cc psiinput.cc psifile11.cc psicc.cc psici.cc psiqtorder.cc 
 CSRC = 
-INC = psiwfn.h psiinput.h psiexenv.h psifile11.h psicc.h psici.h psiqtorder.h \
-r12ref.h
+INC = psiwfn.h psiinput.h psiexenv.h psifile11.h psicc.h psici.h psiqtorder.h
 
 # R12 functionality depends on MP2-R12 code
 ifeq ($(HAVE_SC_SRC_LIB_CHEMISTRY_QC_MBPTR12),yes)
-CXXSRC := $(CXXSRC) psicc_pt2r12.cc rdm.cc
-#psici_pt2r12.cc psiwfn_pt2r12.cc 
-INC := $(INC) psicc_pt2r12.h
-#psici_pt2r12.h
+CXXSRC := $(CXXSRC) psicc_pt2r12.cc r12ref.cc rdm.cc psici.cc
+INC := $(INC) psicc_pt2r12.h r12ref.h rdm.h psici.h
 endif
 
 psitest.testrun: DO_TESTRUN=no
